# FoldR

./: CMakeLists.txt  README.md  build.bat
config/: folders.json
src/: Config.h  FolderWidget.cpp  FolderWidget.h  main.cpp
